crates/forge_services/src/tools/fs/snapshots/forge_services__tools__fs__fs_list__test__fs_list_with_files_and_dirs.snap
---
source: crates/forge_services/src/tools/fs/fs_list.rs
expression: "TempDir::normalize(result.as_str())"
---
<file_list path="[TEMP_DIR]">
<dir path="/">
<dir path="dir1/">
<dir path="dir2/">
<file path="file1.txt">
<file path="file2.txt">
</file_list>
